--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Friday's the name, Designs the Game</title>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
+  <style>
+    html {
+      font-family: PT Sans, sans-serif;
+    }
+
+  </style>
 </head>
+
 <body>
   <h1>Hello World</h1>
 </body>
+
 </html>
