--- a/index.html
+++ b/index.html
@@ -9,13 +9,38 @@
   <style>
     html {
       font-family: PT Sans, sans-serif;
+      text-align: center;
+    }
+    
+    h2 {
+      font-family: Lora, serif;
+    }
+    
+    .photo {
+      display: inline-block;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      border: 15px solid #fff;
+      box-shadow: 0 0 0 5px #333;
+      background-image: url(photo1.jpeg);
+      background-position: top;
+      background-size: cover;
     }
 
   </style>
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <span class="photo"></span>
+  <h1>Michael Freytag</h1>
+  <h2>Designer &amp; Developer</h2>
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script>
+
+
+</script>
 
 </html>
